Finalisation de la classe controleurJeuPuissance4 et de l'Ihm , avec ajout de la documentation